fix(landing page): removed hidden overflow, adjusted footer position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 body {
@@ -123,7 +122,6 @@ nav ul li a:hover {
     color: #ffffff;
     text-align: center;
     padding: 15px 0;
-    position: absolute;
     bottom: 0;
     height: 9%;
     width: 100%;
